--- a/index.html
+++ b/index.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    
-    <!-- Primary Meta Tags -->
-    <title>نور الإسلام | رفيقك الذكي</title>
-    <meta name="theme-color" content="#0f172a">
-    <link rel="icon" href="https://iili.io/fkA4vvj.png" type="image/png">
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Noto+Kufi+Arabic:wght@100..900&display=swap" rel="stylesheet">
-    
-    <script>
-      window.process = { env: { NODE_ENV: 'production' } };
-      window.global = window;
-    </script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['"Noto Kufi Arabic"', 'sans-serif'],
-              quran: ['"Amiri"', 'serif'],
-            },
-            colors: {
-              emerald: { 500: '#10b981', 600: '#059669' },
-              slate: { 950: '#020617' }
-            },
-            animation: {
-              'float': 'float 6s ease-in-out infinite',
-              'spin-slow': 'spin 12s linear infinite',
-              'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-            },
-            keyframes: {
-              float: {
-                '0%, 100%': { transform: 'translateY(0)' },
-                '50%': { transform: 'translateY(-20px)' },
-              }
-            }
+  <!-- Primary Meta Tags -->
+  <title>نور الإسلام | رفيقك الذكي</title>
+  <meta name="theme-color" content="#0f172a">
+  <link rel="icon" href="https://iili.io/fkA4vvj.png" type="image/png">
+
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Noto+Kufi+Arabic:wght@100..900&display=swap"
+    rel="stylesheet">
+
+  <script>
+    window.process = { env: { NODE_ENV: 'production' } };
+    window.global = window;
+  </script>
+
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['"Noto Kufi Arabic"', 'sans-serif'],
+            quran: ['"Amiri"', 'serif'],
           },
+          colors: {
+            emerald: { 500: '#10b981', 600: '#059669' },
+            slate: { 950: '#020617' }
+          },
+          animation: {
+            'float': 'float 6s ease-in-out infinite',
+            'spin-slow': 'spin 12s linear infinite',
+            'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+          },
+          keyframes: {
+            float: {
+              '0%, 100%': { transform: 'translateY(0)' },
+              '50%': { transform: 'translateY(-20px)' },
+            }
+          }
         },
-      }
-    </script>
-    <script type="importmap">
+      },
+    }
+  </script>
+  <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@18.3.1",
@@ -64,21 +68,60 @@
   }
 }
 </script>
-    <style>
-      body { -webkit-tap-highlight-color: transparent; }
-      .no-scrollbar::-webkit-scrollbar { display: none; }
-      .glass-panel { backdrop-filter: blur(20px); background: rgba(15, 23, 42, 0.75); border: 1px solid rgba(255, 255, 255, 0.1); box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37); }
-      .premium-text-gradient {
-        background: linear-gradient(to bottom, #fff 30%, #10b981 100%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-      .glow-emerald { box-shadow: 0 0 20px rgba(16, 185, 129, 0.3); }
-      .glow-emerald-lg { box-shadow: 0 0 40px rgba(16, 185, 129, 0.5); }
-    </style>
-  </head>
-  <body class="bg-[#0f172a] text-white selection:bg-emerald-500/30 overflow-x-hidden">
-    <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
-  </body>
+  <style>
+    body {
+      -webkit-tap-highlight-color: transparent;
+    }
+
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar {
+      width: 4px;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-track {
+      background: rgba(0, 0, 0, 0.2);
+      border-radius: 10px;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-thumb {
+      background: rgba(16, 185, 129, 0.4);
+      border-radius: 10px;
+    }
+
+    .custom-scrollbar {
+      scrollbar-width: thin;
+      scrollbar-color: rgba(16, 185, 129, 0.4) rgba(0, 0, 0, 0.2);
+    }
+
+    .glass-panel {
+      backdrop-filter: blur(20px);
+      background: rgba(15, 23, 42, 0.75);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    }
+
+    .premium-text-gradient {
+      background: linear-gradient(to bottom, #fff 30%, #10b981 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .glow-emerald {
+      box-shadow: 0 0 20px rgba(16, 185, 129, 0.3);
+    }
+
+    .glow-emerald-lg {
+      box-shadow: 0 0 40px rgba(16, 185, 129, 0.5);
+    }
+  </style>
+</head>
+
+<body class="bg-[#0f172a] text-white selection:bg-emerald-500/30 overflow-x-hidden">
+  <div id="root"></div>
+  <script type="module" src="./index.tsx"></script>
+</body>
+
 </html>
