--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 
   <!-- Primary Meta Tags -->
-  <title>نور الإسلام | رفيقك الذكي</title>
+  <title>نور الإسلام | طريقك للجنة</title>
   <meta name="theme-color" content="#0f172a">
   <link rel="icon" href="https://iili.io/fkA4vvj.png" type="image/png">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link
-    href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Noto+Kufi+Arabic:wght@100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Noto+Kufi+Arabic:wght@100..900&family=Reem+Kufi:wght@400..900&display=swap"
     rel="stylesheet">
 
   <script>
@@ -71,6 +71,12 @@
   <style>
     body {
       -webkit-tap-highlight-color: transparent;
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+    }
+
+    body::-webkit-scrollbar {
+      display: none;
     }
 
     .no-scrollbar::-webkit-scrollbar {
@@ -97,15 +103,25 @@
     }
 
     .glass-panel {
-      backdrop-filter: blur(20px);
-      background: rgba(15, 23, 42, 0.75);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+      backdrop-filter: blur(24px) saturate(180%);
+      background: rgba(15, 23, 42, 0.65);
+      border: 1px solid rgba(255, 255, 255, 0.08);
+      box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
+    }
+
+    .crystal-glass {
+      backdrop-filter: blur(30px) saturate(200%);
+      background: linear-gradient(135deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.01) 100%);
+      border: 1px solid rgba(255, 255, 255, 0.12);
+      box-shadow:
+        inset 0 0 20px rgba(255, 255, 255, 0.02),
+        0 20px 50px rgba(0, 0, 0, 0.4);
     }
 
     .premium-text-gradient {
       background: linear-gradient(to bottom, #fff 30%, #10b981 100%);
       -webkit-background-clip: text;
+      background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
@@ -115,6 +131,31 @@
 
     .glow-emerald-lg {
       box-shadow: 0 0 40px rgba(16, 185, 129, 0.5);
+    }
+
+    .radiant-rays {
+      background: radial-gradient(circle at center, rgba(16, 185, 129, 0.15) 0%, transparent 70%);
+      pointer-events: none;
+    }
+
+    @keyframes rotate-rays {
+      from {
+        transform: rotate(0deg);
+      }
+
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    .animate-rotate-slow {
+      animation: rotate-rays 60s linear infinite;
+    }
+
+    /* Islamic Pattern Background (Subtle) */
+    .islamic-pattern {
+      opacity: 0.03;
+      background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M30 0l5.878 17.5L54.378 17.5l-14.939 10.75L45.317 45.75l-15.317-11.25-15.317 11.25 5.878-17.5L5.622 17.5h18.5L30 0z' fill='%23ffffff' fill-opacity='1' fill-rule='evenodd'/%3E%3C/svg%3E");
     }
   </style>
 </head>
