--- a/index.html
+++ b/index.html
@@ -8,13 +8,58 @@
 
   <!-- Primary Meta Tags -->
   <title>نور الإسلام | طريقك للجنة</title>
+  <meta name="description"
+    content="موقع نور الإسلام، طريقك نحو الجنة. استمع واقرأ القرآن الكريم، أوقات الصلاة، أذكار، وتطبيقات إسلامية شاملة بتصميم عصري." />
+  <meta name="keywords" content="قرآن, إسلام, نور الإسلام, صلاة, أذكار, تسبيح, رمضان, خطب, دين, أدعية" />
+  <meta name="author" content="نور الإسلام" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="نور الإسلام | طريقك للجنة" />
+  <meta property="og:description"
+    content="موقع نور الإسلام الإسلامي الشامل. استمع للقرآن الكريم، تابع أوقات الصلاة والأذكار وغيرها من الخدمات الإسلامية." />
+  <meta property="og:image" content="./logo.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="نور الإسلام | طريقك للجنة" />
+  <meta name="twitter:description"
+    content="موقع نور الإسلام الإسلامي الشامل. استمع للقرآن الكريم، تابع أوقات الصلاة والأذكار وغيرها من الخدمات الإسلامية." />
+  <meta name="twitter:image" content="./logo.png" />
+
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="googlea3e53f5cbcd6f4a4" />
+  <meta name="google-site-verification" content="0bK_qqXjc49-dSMlKqn0R2J8oFqRFXNWMN8xGDTd9tU" />
+
   <meta name="theme-color" content="#0f172a">
-  <link rel="icon" href="https://iili.io/fkA4vvj.png" type="image/png">
+  <link rel="icon" href="./icon.png" type="image/png">
+  <link rel="apple-touch-icon" href="./icon.png">
+  <link rel="canonical" href="https://noor-al-islam.vercel.app/" />
+  <link rel="manifest" href="./manifest.json">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link
     href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Noto+Kufi+Arabic:wght@100..900&family=Reem+Kufi:wght@400..900&display=swap"
     rel="stylesheet">
+
+  <!-- Structured Data / JSON-LD for Google -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "نور الإسلام | طريقك للجنة",
+      "url": "https://noor-al-islam.vercel.app/",
+      "description": "موقع وتطبيق نور الإسلام يقدم لك كل ما تحتاجه في يومك الإسلامي من قرآن كريم، أذكار، مواقيت صلاة، تسبيح والمزيد.",
+      "applicationCategory": "LifestyleApplication",
+      "operatingSystem": "All",
+      "inLanguage": "ar",
+      "creator": {
+        "@type": "Organization",
+        "name": "نور الإسلام"
+      }
+    }
+  </script>
 
   <script>
     window.process = { env: { NODE_ENV: 'production' } };
